--- a/Source/Source.csproj
+++ b/Source/Source.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenericList.cs" />
+    <Compile Include="IMediaItemQuery.cs" />
+    <Compile Include="IMediaQueueService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringList.cs" />
   </ItemGroup>
